feat(picker): add gameboard picker feature
closes #24

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -1,5 +1,6 @@
 {
     "translation": {
-        "It's board game time !": "It's board game time !!!"
+        "It's board game time !": "It's board game time !!!",
+        "Choose me a boardgame": "Choose me a boardgame"
     }
 }
